--- a/Trabajo Importante/Index.html
+++ b/Trabajo Importante/Index.html
@@ -18,49 +18,49 @@
         <a href="" id="prim">Ejuercicio 1</a>
     </div>
     <div>
-        <a href="/Dentro/Martin02.html">Ejuercicio 2</a>
+        <a href="/Trabajo Importante/Dentro/Martin02.html">Ejuercicio 2</a>
     </div>
     <div>
-        <a href="/Dentro/Martin03.html">Ejuercicio 3</a>
+        <a href="/Trabajo Importante/Dentro/Martin03.html">Ejuercicio 3</a>
     </div>
     <div>
-        <a href="/Dentro/Martin04.html">Ejuercicio 4</a>
+        <a href="/Trabajo Importante/Dentro/Martin04.html">Ejuercicio 4</a>
     </div>
     <div>
-        <a href="/Dentro/Martin05.html">Ejuercicio 5</a>
+        <a href="/Trabajo Importante/Dentro/Martin05.html">Ejuercicio 5</a>
     </div>
     <div>
-        <a href="/Dentro/Martin06.html">Ejuercicio 6</a>
+        <a href="/Trabajo Importante/Dentro/Martin06.html">Ejuercicio 6</a>
     </div>
     <div>
-        <a href="/Dentro/Martin07.html">Ejuercicio 7</a>
+        <a href="/Trabajo Importante/Dentro/Martin07.html">Ejuercicio 7</a>
     </div>
     <div>
-        <a href="/Dentro/Martin08.html" onmouseover="oculta(1)" id="oc">Ejuercicio 8</a>
+        <a href="/Trabajo Importante/Dentro/Martin08.html" onmouseover="oculta(1)" id="oc">Ejuercicio 8</a>
     </div>
     <div>
-        <a href="/Dentro/Martin09.html">Ejuercicio 9</a>
+        <a href="/Trabajo Importante/Dentro/Martin09.html">Ejuercicio 9</a>
     </div>
     <div>
-        <a href="/Dentro/Martin10.html">Ejuercicio 10</a>
+        <a href="/Trabajo Importante/Dentro/Martin10.html">Ejuercicio 10</a>
     </div>
     <div>
-        <a href="/Dentro/Martin11.html">Ejuercicio 11</a>
+        <a href="/Trabajo Importante/Dentro/Martin11.html">Ejuercicio 11</a>
     </div>
     <div>
-        <a href="/Dentro/Martin12.html">Ejuercicio 12</a>
+        <a href="/Trabajo Importante/Dentro/Martin12.html">Ejuercicio 12</a>
     </div>
     <div>
-        <a href="/Dentro/Martin13.html">Ejuercicio 13</a>
+        <a href="/Trabajo Importante/Dentro/Martin13.html">Ejuercicio 13</a>
     </div>
     <div>
-        <a href="/Dentro/Martin14.html">Ejuercicio 14</a>
+        <a href="/Trabajo Importante/Dentro/Martin14.html">Ejuercicio 14</a>
     </div>
     <div>
-        <a href="/Dentro/Martin15.html">Ejuercicio 15</a>
+        <a href="/Trabajo Importante/Dentro/Martin15.html">Ejuercicio 15</a>
     </div>
-    <a href="/Dentro/Martin08.html" class="secret">Aqui esta el 8 :v</a>
+    <a href="/Trabajo Importante/Dentro/Martin08.html" class="secret">Aqui esta el 8 :v</a>
     </br>
-    <a href="/Dentro/Martin01.html" class="secret">y el 1 que no se ve >:(</a>
+    <a href="/Trabajo Importante/Dentro/Martin01.html" class="secret">y el 1 que no se ve >:(</a>
 </body>
 </html>
