--- a/Trabajo Importante/Index.html
+++ b/Trabajo Importante/Index.html
@@ -61,6 +61,6 @@
     </div>
     <a href="/Trabajo Importante/Dentro/Martin08.html" class="secret">Aqui esta el 8 :v</a>
     </br>
-    <a href="/Trabajo Importante/Dentro/Martin01.html" class="secret">y el 1 que no se ve >:(</a>
+    <a href="/Trabajo Importante/Dentro/Martin01.html" class="secret">y el 1 que no se ve >:)</a>
 </body>
 </html>
